# esp-idf-component-raylib

./: .gitignore  .gitmodules  README.md
.github/: CI_IMPLEMENTATION.md  README.md
.github/workflows/: build-and-test-examples.yml  build-example.yml  deploy-pages.yml  launchpad-pages.yml  release-examples.yml  screenshot-gallery.yml  test-example.yml  upload-components.yml  upload-raylib-component.yml
docs/: CI.md
esp_raylib_port/: CMakeLists.txt  README.md  idf_component.yml
esp_raylib_port/src/: esp_raylib_port.c
examples/hello/boards/esp32_p4_function_ev_board/: wokwi.toml
examples/hello/main/: hello.c  idf_component.yml
launchpad/config/: config.toml
raylib/: CMakeLists.txt  README.md  idf_component.yml
raylib/esp_ray_port/: CMakeLists.txt  idf_component.yml
raylib/esp_ray_port/include/: esp_ray_port.h
raylib/esp_ray_port/src/: esp_ray_port.c
raylib/esp_raylib_port/include/: esp_raylib_port.h
raylib/examples/esp32/m5stack-core-2_hello/main/: main.c
raylib/examples/esp32/m5stack-core2_hello/: diagram.json  sdkconfig.defaults  wokwi-run.sh  wokwi.toml
raylib/examples/esp32/m5stack-core2_hello/main/: idf_component.yml
raylib/examples/esp32_s3_box_3_hello/: CMakeLists.txt  README.md
raylib/examples/esp32_s3_box_3_hello/main/: idf_component.yml  main.c
raylib/examples/esp32_s3_box_hello/: README.md
raylib/examples/esp32_s3_box_hello/main/: idf_component.yml  main.c
raylib/examples/esp32_s3_eye_hello/: README.md
raylib/examples/esp32_s3_eye_hello/main/: idf_component.yml  main.c
raylib/examples/esp32_s3_lcd_ev_board_hello/: CMakeLists.txt
raylib/examples/esp32_s3_lcd_ev_board_hello/main/: idf_component.yml  main.c
raylib/examples/esp32s3/espressif-esp-vocat_hello/: diagram.json  sdkconfig.defaults
raylib/examples/esp32s3/espressif-esp-vocat_hello/main/: idf_component.yml  main.c
raylib/examples/esp32s3/espressif-esp32-s3-box-3_hello/: diagram.json
raylib/examples/esp32s3/espressif-esp32-s3-box-3_hello/main/: CMakeLists.txt  idf_component.yml  main.c
raylib/examples/esp32s3/espressif-esp32-s3-box_hello/: diagram.json
raylib/examples/esp32s3/espressif-esp32-s3-box_hello/main/: idf_component.yml  main.c
raylib/examples/esp32s3/espressif-esp32-s3-eye_hello/: diagram.json
raylib/examples/esp32s3/espressif-esp32-s3-eye_hello/main/: idf_component.yml  main.c
raylib/examples/esp32s3/espressif-esp32-s3-korvo-2_hello/: diagram.json
raylib/examples/esp32s3/espressif-esp32-s3-korvo-2_hello/main/: idf_component.yml  main.c
raylib/examples/esp32s3/espressif-esp32-s3-lcd-ev-board_hello/: wokwi-run.sh
raylib/examples/esp32s3/espressif-esp32-s3-lcd-ev-board_hello/main/: idf_component.yml  main.c
raylib/examples/esp32s3/m5stack-atom-s3_hello/: CMakeLists.txt  README.md  diagram.json
raylib/examples/esp32s3/m5stack-atom-s3_hello/main/: idf_component.yml  main.c
raylib/examples/esp32s3/m5stack-atom-s3r_hello/: diagram.json  wokwi-run.sh
raylib/examples/esp32s3/m5stack-atom-s3r_hello/main/: idf_component.yml  main.c
raylib/examples/esp32s3/m5stack-core-s3_hello/: diagram.json  wokwi-run.sh  wokwi.toml
raylib/examples/esp32s3/m5stack-core-s3_hello/main/: idf_component.yml  main.c
raylib/examples/esp32s3_box_3_hello/: CMakeLists.txt  sdkconfig.defaults
raylib/examples/esp32s3_box_3_hello/main/: CMakeLists.txt  idf_component.yml  main.c
raylib/examples/esp32s3_korvo_2_hello/: CMakeLists.txt  sdkconfig.defaults
raylib/examples/esp32s3_korvo_2_hello/main/: idf_component.yml  main.c
raylib/examples/esp_vocat_hello/main/: idf_component.yml  main.c
raylib/examples/hello/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp-box-3  sdkconfig.defaults.esp32_c3_lcdkit  sdkconfig.defaults.esp32_c6_devkit  sdkconfig.defaults.esp32_p4_function_ev_board  sdkconfig.defaults.esp32_p4_function_ev_board_rev-1.0  sdkconfig.defaults.m5stack_core2  sdkconfig.defaults.m5stack_core_s3
raylib/examples/hello/main/: CMakeLists.txt  Kconfig.projbuild  board_init.c  hello.c  idf_component.esp32p4.yml  idf_component.yml
raylib/examples/hello/wokwi/esp-box-3/: wokwi.toml
raylib/examples/m5stack_core_s3_hello/main/: idf_component.yml  main.c
raylib/include/: config.h  dirent.h  rlsw_esp_idf.h
raylib/templates/raylib-hello-c/: CMakeLists.txt  README.md  diagram.json  sdkconfig.defaults  template.yaml  wokwi-run.sh  wokwi.toml
raylib/templates/raylib-hello-c/main/: idf_component.yml  main.c
raylib_bsp/: CMakeLists.txt  Kconfig  idf_component.yml
raylib_bsp/include/: raylib_bsp.h
raylib_bsp/src/: raylib_bsp_common.c
raylib_bsp/src/boards/: raylib_bsp_esp32_p4_function_ev.c  raylib_bsp_esp_box_3.c  raylib_bsp_m5stack_core_s3.c
tests/: test_invariant_esp_raylib_port.c
